--- a/esindex.css
+++ b/esindex.css
@@ -3,6 +3,59 @@ body {
     padding: 0;
     background: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/Zamazor.jpg) no-repeat center top;
     background-size: cover;
+    background-attachment: fixed;
+    font-family: sans-serif;
+    height: 100vh;
+  }
+  .navbar{
+    height: 60px;
+    background-color:black;
+    display: flex;
+    justify-content: space-between;
+    background-attachment: fixed;
+  }
+  .nav{
+    background-color:black;
+    height: 60px;
+    width: 95px;
+    border-style: none;
+    color: rgba(255, 255, 255, 0.87);
+  }
+  #logo{
+    background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/Logo.jpg?raw=true) ;
+    background-size: cover;
+    height: 60px;
+    width:180px;
+  }
+  #but{
+    background-color: black;
+    height: 30px;
+    width: 95px;
+    border-style: none;
+    
+    color: rgba(255, 255, 255, 0.87);
+  }
+  .nav:hover{
+    background-color:rgb(70, 69, 69);
+    color: rgb(255, 255, 255);
+  }
+  #but:hover{
+    background-color:rgb(70, 69, 69);
+    color: rgb(255, 255, 255);
+  }
+  @media (width <= 800px) {
+  #logo{
+    background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/Logo%20chiquito.jpg?raw=true) ;
+    background-size: cover;
+    height: 60px;
+    width:50px;
+  }
+  }
+  #login {
+    margin: 0;
+    padding: 0;
+    background: url(https://raw.githubusercontent.com/Nahir13/Ecommerce/main/img/FLogin.jpg) no-repeat center top;
+    background-size: cover;
     font-family: sans-serif;
     height: 100vh;
   }
@@ -84,5 +137,239 @@ body {
   }
   
   .login-box a:hover {
-    color: #fff;
+    color:#fff;
+}
+#aboutUs{ 
+  background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
+  background-repeat:  no repeat;   
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0%;
+}
+P, h2{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+ .frontview{
+   width: 100%; background-color: #ffffff;
+   z-index: 100%;
+   margin-right: 0;      
+   margin-top : 0;
+   margin-bottom: 5%; 
+   margin-left: 0;
+   border: 2px solid #ffffff;
+   border-radius: 5px;
+  }
+  .title{
+    font-size: 50px;
+    color: #313131 ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .text{
+   width: 98%; 
+   background-color: #ffffff;
+   height: auto;
+   z-index: 100%;
+   margin: 20px;
+   border: 2px solid #ffffff;
+   border-radius: 5px;
+  }
+
+  .quienesomos1{
+font-size: 40px ;
+
+  }
+  .quienesomos{
+font-size: 20px ;
+text-align: start;
+
+   }   
+  .unidos{
+    width: 100%;
+    height: 20%;
+  }
+  .bannerunidos1{
+    font-size: 45px;
+    color: #ffffff;
+    z-index: 100%;
+    position: absolute; top: 280px; left: 7%;
+
+  }
+  .bannerunidos{
+    font-size: 40px;
+    color: #ffffff;
+    z-index: 100%;
+    position: absolute; top: 760px; left: 7%;
+
+  }
+  .banner{
+      font-size: 35px; 
+      color: #ffffff;
+      z-index: 100%   ;
+      position: absolute; top: 400px; left: 7%;
+
+  } 
+  @media(width <= 1199px){
+    .banner{
+      display: flex;
+      font-size: 20px;
+      top: 320px;
+    }
+    .bannerunidos{
+      display: flex;
+      font-size: 22px;
+      top: 520px;
+    }
+    .bannerunidos1{
+       display: flex;
+       font-size: 22px;
+       top: none;
+    }
+  }
+
+  .contenedor{
+    text-align: center;
+    background-color: #D6DAC8;
+    border: 2px solid #acdddd;
+    box-shadow: #bbbbbb 0px 0px 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: auto;
+    height: auto;
+    margin: 5px;
+    padding: auto;
+}
+hr{
+    margin: 10px;
+    box-shadow: #bbbbbb 0px 0px 10px;
+}
+h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #FEFDED;
+    font-size: 30px;
+    text-align: center;
+}
+p{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #496989;
+    font-size: 25px;
+}
+select{
+    color: black;
+    background-color: transparent;
+    border-radius: 5px;
+    width: auto;
+    height: 50px;
+    font-size: 15px;
+    display: flex;
+    font-family: italical;
+    margin: 20px 5px;
+    padding: 2px;
+    text-align: center;
+}
+.productos{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.foto{
+    background-image: url(https://4.bp.blogspot.com/-aTO6McxCjNg/Tm0L0zxGA0I/AAAAAAAAAHI/wn1kpBr44cg/ELCONSTRUCTOR-Focos%252520H4%252520Tipo%252520Xenon%252520Autos%252520Y%252520Camionetas.jpg);
+    border: 1px solid #acdddd;
+    width: 310px;
+    height: 450px;
+    margin: 10px;
+    padding: auto;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-position: center;
+    background-size: 150px;
+    border-radius: 8px;
+}
+.foto1{
+    background-image: url(https://tse3.mm.bing.net/th?id=OIP.cd8Mm_8H2P-4dxO8RdHILQHaHa&pid=Api&P=0&h=180);
+    background-position: center;
+    background-color: white;
+    background-size: 150px;
+    width: 310px;
+    height: 450px;
+    border: 1px solid #acdddd;
+    margin: 10px;
+    padding: auto;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+}
+.foto2{
+    background-image: url(https://tse3.mm.bing.net/th?id=OIP.iNtX4zRV8PHqA4HmXMiqcAHaGY&pid=Api&P=0&h=180);
+    background-position: center;
+    width: 310px;
+    height: 450px;
+    border: 1px solid #acdddd;
+    border-radius: 8px;
+    margin: 10px;
+    padding: auto;
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-color: white;
+}
+.foto3{
+    background-image: url(https://tse3.mm.bing.net/th?id=OIP.UjudSqDldQRGEz1ZX27lVQHaDy&pid=Api&P=0&h=180);
+    background-position: center;
+    width: 310px;
+    height: 450px;
+    border: 1px solid #acdddd;
+    margin: 10px;
+    padding: auto;
+    background-size: 200px;
+    background-repeat: no-repeat;
+    background-color: white;
+    border-radius: 8px;
+}
+h2{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    color: #7AB2B2;
+}
+h3{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+    margin-top: 210px;
+}
+u{
+    color: #7AB2B2;
+}
+button{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #3c44a7;
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 18px;
+    border-radius: 5px;
+    text-align: center;
+    width: 200px;
+    height: 40px;
+    margin-left: 50px;
+    margin-bottom: 5px;
+}
+button:hover{
+    background-color: #7AB2B2;
+}
+
+@media(600px<= width <=1199){
+    .contenedor{
+        width: auto;
+        height: auto;
+    }
+}
+@media(width <= 600px){
+    .contenedor{
+        width: auto;
+        height: auto;
+    }
 }
