--- a/esindex.css
+++ b/esindex.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/Zamazor.jpg) no-repeat center top;
+    background: url(img/pickup.jpg) no-repeat center top;
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
