--- a/esindex.css
+++ b/esindex.css
@@ -1,7 +1,51 @@
-body {
+.navbar{
+  height: 60px;
+  background-color:black;
+  display: flex;
+  justify-content: space-between;
+  background-attachment: fixed;
+}
+.nav{
+  background-color:black;
+  height: 60px;
+  width: 95px;
+  border-style: none;
+  color: rgba(255, 255, 255, 0.87);
+}
+#logo{
+  background-image: url(img/Logo.jpg) ;
+  background-size: cover;
+  height: 60px;
+  width:180px;
+}
+#but{
+  background-color:black;
+  height: 30px;
+  width: 95px;
+  border-style: none;
+  
+  color: rgba(255, 255, 255, 0.87);
+}
+.nav:hover{
+  background-color:rgb(70, 69, 69);
+  color: rgb(255, 255, 255);
+}
+#but:hover{
+  background-color:rgb(70, 69, 69);
+  color: rgb(255, 255, 255);
+}
+@media (width <= 800px) {
+#logo{
+  background-image: url(img/Logo\ chiquito.jpg) ;
+  background-size: cover;
+  height: 60px;
+  width:50px;
+}
+}
+#login {
     margin: 0;
     padding: 0;
-    background: url(img/pickup.jpg) no-repeat center top;
+    background: url(img/FLogin.jpg) no-repeat center top;
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
@@ -86,3 +130,82 @@ body {
   .login-box a:hover {
     color: #fff;
 }
+#aboutUs{ 
+  background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
+  background-repeat:  no repeat;   
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0%;
+}
+P, h2{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+ .frontview{
+   width: 100%; background-color: #ffffff; 
+   z-index: 100%;
+   margin-right: 0;      
+   margin-top : 0;
+   margin-bottom: 5%; 
+   margin-left: 0;
+   border: 2px solid #ffffff;
+   border-radius: 5px;
+  
+  
+  }
+  .title{
+    font-size: 50px;
+    color: #313131 ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .text{
+   width: 100%; background-color: #ffffff; 
+   height: 40%;
+   z-index: 100%;
+   margin-right: 0;      
+   margin-top : 0;
+   margin-bottom: 5%; 
+   margin-left: 0;
+   border: 2px solid #ffffff;
+   border-radius: 5px;
+
+  
+  
+  }
+
+  .quienesomos1{
+font-size: 40px ;
+
+  }
+  .quienesomos{
+font-size: 20px ;
+
+   }   
+  .unidos{
+     width: 100%;
+     
+     
+  height: 20%;
+  }
+  .bannerunidos1{
+    font-size: 45px;
+    color: #ffffff;
+    z-index: 100%;
+    position: absolute; top: 270px; left: 7%;
+
+  }
+  .bannerunidos{
+    font-size: 40px;
+    color: #ffffff;
+    z-index: 100%;
+    position: absolute; top: 760px; left: 7%;
+
+  }
+  .banner{
+      font-size: 35px; 
+      color: #ffffff;
+      z-index: 100%   ;
+      position: absolute; top: 400px; left: 7%;
+
+  } 
