--- a/esindex.css
+++ b/esindex.css
@@ -1,14 +1,25 @@
+body {
+  margin: 0;
+  padding: 0;
+  background: url(https://github.com/Nahir13/Ecommerce/blob/main/img/FLogin.jpg?raw=true);
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: sans-serif;
+  height: 100vh;
+}
 .navbar{
   height: 60px;
   background-color:black;
   display: flex;
   justify-content: space-between;
   background-attachment: fixed;
+  margin: 1px;
 }
 .nav{
+  justify-content: space-between;
   background-color:black;
   height: 60px;
-  width: 95px;
+  width: 100px;
   border-style: none;
   color: rgba(255, 255, 255, 0.87);
 }
@@ -20,15 +31,17 @@
 }
 #but{
   background-color:black;
-  height: 30px;
-  width: 95px;
+  height: 25px;
+  width: 96px;
+  display: flex;
+  margin: 3px;
   border-style: none;
-  
   color: rgba(255, 255, 255, 0.87);
 }
 .nav:hover{
   background-color:rgb(70, 69, 69);
   color: rgb(255, 255, 255);
+  width: 130px;
 }
 #but:hover{
   background-color:rgb(70, 69, 69);
@@ -42,15 +55,15 @@
   width:50px;
 }
 }
-  #login {
+#login {
     margin: 0;
     padding: 0;
-    background: url(https://raw.githubusercontent.com/Nahir13/Ecommerce/main/img/FLogin.jpg) no-repeat center top;
+    background: url(img/FLogin.jpg) no-repeat center top;
     background-size: cover;
+    background-attachment: fixed;
     font-family: sans-serif;
     height: 100vh;
-  }
-  
+  }  
   .login-box {
     width: 320px;
     height: 420px;
@@ -74,7 +87,7 @@
     left: calc(50% - 50px);
   }
   
-  .login-box h1 {
+  .login-box h6 {
     margin: 0;
     padding: 0 0 20px;
     text-align: center;
@@ -129,6 +142,7 @@
   
   .login-box a:hover {
     color:#fff;
+    color: #fff;
 }
 #aboutUs{ 
   background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
@@ -142,12 +156,10 @@ P, h2{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
  .frontview{
-   width: 100%; background-color: #ffffff;
+   width: 98%; 
+   background-color: #ffffff;
    z-index: 100%;
-   margin-right: 0;      
-   margin-top : 0;
-   margin-bottom: 5%; 
-   margin-left: 0;
+   margin: 10px;
    border: 2px solid #ffffff;
    border-radius: 5px;
   }
@@ -160,37 +172,42 @@ P, h2{
   .text{
    width: 98%; 
    background-color: #ffffff;
-   height: auto;
    z-index: 100%;
-   margin: 20px;
+   margin: 10px;
    border: 2px solid #ffffff;
+   border-radius: 5px;
   }
 
   .quienesomos1{
-font-size: 40px ;
+    font-size: 40px ;
+    color: #000;
 
   }
   .quienesomos{
-  font-size: 20px ;
-  text-align: start;
-
+    font-size: 20px ;
+    color: #000;
    }   
   .unidos{
-    width: 100%;
-    height: 20%;
+     width: 100%;
+     height: 20%;
+     background-repeat: no-repeat;
   }
   .bannerunidos1{
     font-size: 45px;
     color: #ffffff;
     z-index: 100%;
-    position: absolute; top: 320px; left: 7%;
+    position: absolute; 
+    top: 270px; 
+    left: 7%;
 
   }
   .bannerunidos{
     font-size: 40px;
     color: #ffffff;
     z-index: 100%;
-    position:absolute; top:760px; left: 7%;
+    position: absolute; 
+    top: 760px; 
+    left: 7%;
 
   }
   .banner{
@@ -198,6 +215,7 @@ font-size: 40px ;
       color: #ffffff;
       z-index: 100%   ;
       position: absolute; top: 400px; left: 7%;
+
   } 
   @media(width <= 1199px){
     .banner{
@@ -216,7 +234,6 @@ font-size: 40px ;
        top: none;
     }
   }
-
   .contenedor{
     text-align: center;
     background-color: #D6DAC8;
@@ -225,14 +242,10 @@ font-size: 40px ;
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     width: auto;
     height: auto;
-    margin: 5px;
     padding: auto;
-}
-#BPEspecificos{
-  margin:0%
+    justify-content: space-evenly;
 }
 hr{
     margin: 10px;
@@ -240,14 +253,16 @@ hr{
 }
 h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #FEFDED;
+    color: #496989;
     font-size: 30px;
     text-align: center;
 }
-p{
+h5{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #496989;
     font-size: 25px;
+    display: flex;
+    flex-wrap: wrap;
 }
 select{
     color: black;
@@ -257,8 +272,9 @@ select{
     height: 50px;
     font-size: 15px;
     display: flex;
+    flex-wrap: wrap;
     font-family: italical;
-    margin: 20px 5px;
+    margin: 10px 5px;
     padding: 2px;
     text-align: center;
 }
@@ -266,13 +282,14 @@ select{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin: 10px;
 }
 .foto{
     background-image: url(https://4.bp.blogspot.com/-aTO6McxCjNg/Tm0L0zxGA0I/AAAAAAAAAHI/wn1kpBr44cg/ELCONSTRUCTOR-Focos%252520H4%252520Tipo%252520Xenon%252520Autos%252520Y%252520Camionetas.jpg);
     border: 1px solid #acdddd;
     width: 310px;
     height: 450px;
-    margin: 10px;
+    margin: 5px;margin-top: 10px;
     padding: auto;
     background-repeat: no-repeat;
     background-color: white;
@@ -319,7 +336,7 @@ select{
     background-color: white;
     border-radius: 8px;
 }
-h2{
+h4{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 25px;
@@ -330,12 +347,12 @@ h3{
     font-size: 20px;
     text-align: center;
     color: black;
-    margin-top: 210px;
+    margin-top: 250px;
 }
 u{
     color: #7AB2B2;
 }
-.Bproducts{
+button{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #3c44a7;
     display: block;
@@ -365,3 +382,327 @@ button:hover{
         height: auto;
     }
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif, 'Segoe UI', Tahoma, Verdana;
+}
+.cuerpo {
+  background-image: linear-gradient(to right, #000, #333333, #ffffff);
+  height:100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  align-items: center; 
+}
+.conteiner {
+  margin-top: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  justify-content: center;
+}
+.card {
+  height: 400px;
+  width: 300px;
+  margin: 10px;
+  transition: 300ms;
+}
+
+.autos, .autos_2, .autos_3, .autos_4, .autos_5, .autos_6, .autos_7, .autos_8, .autos_9, .autos_10 {
+  height: 200px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+  background-color: rgba(14, 105, 179, 0.89);
+  transform: 300ms;
+  position: absolute;
+}
+
+.imagen_del_auto {
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/honda%20cr%20v%201.jpg);
+  height: 140px;
+  width: 300px;
+  background-size: cover;
+  margin-bottom: 200px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_2 {
+  height: 120px;
+  width: 200px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/civic%201.jpg);
+  background-size: cover;
+  margin-bottom: 180px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_3 {
+  height: 150px;
+  width: 240px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/mazda%201.jpg);
+  background-size: cover;
+  margin-bottom: 200px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_4 {
+  height: 180px;
+  width: 300px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/subaro%201.jpg);
+  background-size: cover;
+  margin-bottom: 210px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_5 {
+  height: 140px;
+  width: 300px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/corolla%201.jpg);
+  background-size: cover;
+  margin-bottom: 190px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_6 {
+  height: 140px;
+  width: 260px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/rta%201.jpg);
+  background-size: cover;
+  margin-bottom: 190px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_7 {
+  height: 140px;
+width: 260px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/etios%201.jpg);
+  background-size: cover;
+  margin-bottom: 190px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_8 {
+  height: 140px;
+  width: 260px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/sw4%201.jpg);
+  background-size: cover;
+  margin-bottom: 195px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_9 {
+  height: 140px;
+  width: 260px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/yaris%201.jpg);
+  background-size: cover;
+  margin-bottom: 195px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.imagen_del_auto_10 {
+  height: 140px;
+  width: 260px;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/hilux%201.jpg);
+  background-size: cover;
+  margin-bottom: 195px;
+  transition: 300ms;
+  filter: drop-shadow(5px -4px 10px #000);
+  border-radius: 10%;
+}
+.detalles, .detalles_2, .detalles_3, .detalles_4, .detalles_5, .detalles_6, .detalles_7, .detalles_8, .detalles_9, .detalles_10  {
+  height: 260px;
+  width: 300px;
+  background-color: #000;
+  position: absolute;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  margin-top: 150px;
+  z-index: 2;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  transition: 300ms;
+}
+/*hover*/
+.card:hover .autos, .autos_2, .autos_3, .autos_4, .autos_5, .autos_6, .autos_7, .autos_8, .autos_9, .autos_10 {
+  scale:(1.5);
+}
+.card:hover .imagen_del_auto {
+  transform: translateY(-50px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/crv%202.jpg);
+  height: 210px;
+  width: 190px;
+}
+.card:hover .imagen_del_auto_2 {
+  transform: translateY(-50px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/civic%202.jpg);
+  height: 170px;
+  width: 290px;
+  margin-bottom: 130px;
+}
+.card:hover .imagen_del_auto_3 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/marav%202.jpg);
+  height: 220px;
+  width: 190px;
+  margin-bottom: 220px;
+}
+.card:hover .imagen_del_auto_4 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/subaro%202.jpg);
+  height: 220px;
+  width: 190px;
+  margin-bottom: 220px;
+}
+.card:hover .imagen_del_auto_5 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/corolla%202.jpg);
+  height: 220px;
+  width: 350px;
+  margin-bottom: 130px;
+}
+.card:hover .imagen_del_auto_6 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/toyota%202.jpg);
+  height: 150px;
+  width: 300px;
+  margin-bottom: 140px;
+}
+.card:hover .imagen_del_auto_7 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/etios%202.jpg);
+  height: 145px;
+  width: 340px;
+  margin-bottom: 110px;
+}
+.card:hover .imagen_del_auto_8 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/sw4%202.jpg);
+  height: 160px;
+  width: 340px;
+  margin-bottom: 120px;
+}
+.card:hover .imagen_del_auto_9 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/yaris%202.jpg);
+  height: 160px;
+  width: 340px;
+  margin-bottom: 120px;
+}
+.card:hover .imagen_del_auto_10 {
+  transform: translateY(-40px);
+  transition: 300ms;
+  filter: none;
+  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/hilux%202.jpg);
+  height: 155px;
+  width: 340px;
+  margin-bottom: 130px;
+}
+.card:hover .autos {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_2 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_3 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_4 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_5 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_6 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_7 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_8 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_9 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+.card:hover .autos_10 {
+  background-image: radial-gradient(white, rgb(50, 30, 20));
+}
+h2 {
+  color:#ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+p {
+  color: #ffffff;
+  margin: auto;
+  width: 90%;
+  font-size: 16px;
+}
+.boton {
+  width: 10px 20px;
+  height: 30px;
+}
+.boton {
+  width: 200px;
+  height: 50px;
+  margin: auto;
+  cursor: pointer;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 24;
+  -moz-border-radius: 24;
+  border-radius: 24px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 36px;
+  padding: 10px 19px 10px 17px;
+  text-decoration: none;
+}
+
+.boton:hover {
+  background: #661c3e;
+  background-image: -webkit-linear-gradient(top, #661c3e, #8f2974);
+  background-image: -moz-linear-gradient(top, #661c3e, #8f2974);
+  background-image: -ms-linear-gradient(top, #661c3e, #8f2974);
+  background-image: -o-linear-gradient(top, #661c3e, #8f2974);
+  background-image: linear-gradient(to bottom, #661c3e, #8f2974);
+  text-decoration: none;
+} 
