--- a/esindex.css
+++ b/esindex.css
@@ -7,6 +7,9 @@ body {
   font-family: sans-serif;
   height: 100vh;
 }
+a {
+text-decoration: none;
+}
 .navbar{
   height: 60px;
   background-color:black;
