--- a/esindex.css
+++ b/esindex.css
@@ -1,6 +1,3 @@
-a{
-  text-decoration: none;
-}
 body {
   margin: 0;
   padding: 0;
@@ -428,7 +425,7 @@ button:hover{
 }
 
 .imagen_del_auto {
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/honda%20cr%20v%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/honda%20cr%20v%201.jpg?raw=true);
   height: 140px;
   width: 300px;
   background-size: cover;
@@ -440,7 +437,7 @@ button:hover{
 .imagen_del_auto_2 {
   height: 120px;
   width: 200px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/civic%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/civic%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 180px;
   transition: 300ms;
@@ -450,7 +447,7 @@ button:hover{
 .imagen_del_auto_3 {
   height: 150px;
   width: 240px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/mazda%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/mazda%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 200px;
   transition: 300ms;
@@ -460,7 +457,7 @@ button:hover{
 .imagen_del_auto_4 {
   height: 180px;
   width: 300px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/subaro%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 210px;
   transition: 300ms;
@@ -470,7 +467,7 @@ button:hover{
 .imagen_del_auto_5 {
   height: 140px;
   width: 300px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/corolla%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/corolla%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 190px;
   transition: 300ms;
@@ -480,7 +477,7 @@ button:hover{
 .imagen_del_auto_6 {
   height: 140px;
   width: 260px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/rta%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/rta%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 190px;
   transition: 300ms;
@@ -490,7 +487,7 @@ button:hover{
 .imagen_del_auto_7 {
   height: 140px;
 width: 260px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/etios%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/etios%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 190px;
   transition: 300ms;
@@ -500,7 +497,7 @@ width: 260px;
 .imagen_del_auto_8 {
   height: 140px;
   width: 260px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/sw4%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 195px;
   transition: 300ms;
@@ -510,7 +507,7 @@ width: 260px;
 .imagen_del_auto_9 {
   height: 140px;
   width: 260px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/yaris%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/yaris%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 195px;
   transition: 300ms;
@@ -520,7 +517,7 @@ width: 260px;
 .imagen_del_auto_10 {
   height: 140px;
   width: 260px;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/hilux%201.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/hilux%201.jpg?raw=true);
   background-size: cover;
   margin-bottom: 195px;
   transition: 300ms;
@@ -548,7 +545,7 @@ width: 260px;
   transform: translateY(-50px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/crv%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/crv%202.jpg?raw=true);
   height: 210px;
   width: 190px;
 }
@@ -556,7 +553,7 @@ width: 260px;
   transform: translateY(-50px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/civic%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/civic%202.jpg?raw=true);
   height: 170px;
   width: 290px;
   margin-bottom: 130px;
@@ -565,7 +562,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/marav%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/marav%202.jpg?raw=true);
   height: 220px;
   width: 190px;
   margin-bottom: 220px;
@@ -574,7 +571,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/subaro%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%202.jpg?raw=true);
   height: 220px;
   width: 190px;
   margin-bottom: 220px;
@@ -583,7 +580,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/corolla%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/corolla%202.jpg?raw=true);
   height: 220px;
   width: 350px;
   margin-bottom: 130px;
@@ -592,7 +589,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/toyota%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/toyota%202.jpg?raw=true);
   height: 150px;
   width: 300px;
   margin-bottom: 140px;
@@ -601,7 +598,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/etios%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/etios%202.jpg?raw=true);
   height: 145px;
   width: 340px;
   margin-bottom: 110px;
@@ -610,7 +607,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/sw4%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%202.jpg?raw=true);
   height: 160px;
   width: 340px;
   margin-bottom: 120px;
@@ -619,7 +616,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/yaris%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/yaris%202.jpg?raw=true);
   height: 160px;
   width: 340px;
   margin-bottom: 120px;
@@ -628,7 +625,7 @@ width: 260px;
   transform: translateY(-40px);
   transition: 300ms;
   filter: none;
-  background-image: url(file:///C:/Users/villa/OneDrive/Im%C3%A1genes/hilux%202.jpg);
+  background-image: url(https://github.com/Nahir13/Ecommerce/blob/main/img/hilux%202.jpg?raw=true);
   height: 155px;
   width: 340px;
   margin-bottom: 130px;
