--- a/esindex.css
+++ b/esindex.css
@@ -1,4 +1,4 @@
- #Accesorios{
+ #Accesorios ,#carrito{
   margin: 0;
   padding: 0;
   background: url(https://github.com/Nahir13/Ecommerce/blob/main/img/FLogin.jpg?raw=true);
