--- a/esindex.css
+++ b/esindex.css
@@ -59,7 +59,7 @@
       background-color: white;
       border-radius: 8px;
   }
-    .displaygridpp{
+    .displaygrid{
         margin-top: 5%;
        display: grid;
     grid-template-columns: repeat(4, 25%);
