--- a/esindex.css
+++ b/esindex.css
@@ -310,8 +310,7 @@
 .login-box a:hover {
   color: #fff;
   color: #fff;
-}
- #aboutUs{ 
+} #aboutUs{ 
     background-image: url(https://live.staticflickr.com/620/21200032406_a9f5a7f198_b.jpg);
     background-repeat:  no repeat;   
     background-position: center center;
