--- a/esindex.css
+++ b/esindex.css
@@ -574,7 +574,7 @@ u {
 }
 .PButton {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  background-color: #3498db;
+  background-color: #2c0b8b;
   display: block;
   padding: 10px;
   color: white;
